version 3.1.5 (NOT RELEASED)
- use culture invariant for identifier conversion
- refactoring of query commands
- fluent interface for queries (introduced ICqlQuery) to allow setting CL, execution flags & hints
- ICqlCommand.Execute & IPreparedQuery.Execute with all parameters are depreacated. Use fluent interface instead. 
  These methods will be removed in 3.2
- data transfer tool available in cqlplus (DbCopy) from database (SQLServer) to Cassandra

version 3.1.4
- split cassandra-sharp in 3 NuGet packages: cassandra-sharp (main), cassandra-sharp-interfaces & cassandra-sharp-core

version 3.1.3
- reference on cassandra-sharp should reference automatically CassandraSharp.dll

version 3.1.2
- reference on cassandra-sharp should reference automatically CassandrSharp.Interfaces.dll

version 3.1.1
- fixed deserialization of key for map

version 3.1.0
- moved interface to separate assemblies (avoid Rx dependencies & just update the implementation without rebuilding)
- moved tools and interfaces to separate nuget packages
- revised the build process, using Version.xml to describe versions instead of command line
- renamed GenerateVersion.cmd to Build.cmd
- renamed PublishNugetVersion.cmd to Publish.cmd

version 3.0.3
- reduce dns resolve calls

version 3.0.2
- reduce dns lookup
- ClusterManager now fails if no valid endpoint found
- ClusterManager now fails if current machine ip can't be resolved
- more env info in cqlplus !help
- Rx binaries are now in net40

version 3.0.1
- fixed invalid cast in cqlplus

version 3.0.0
- total rewrite of Connection
- expose a new interface using Rx (IObservable)
- future are now a TPL Task returning a list of results
- improved throughput using LongRunning connection type
- NuGet support for net40 and net45 binaries
- performance report is asynchronous
- official support for nullable (NOTE: sending null in prepare statement is supported but only with C* 1.2.2+)
- receive and send timeout support (disabled by default)