@@ -4,7 +4,8 @@ version 3.1.5 (NOT RELEASED)
 - fluent interface for queries (introduced ICqlQuery) to allow setting CL, execution flags & hints
 - ICqlCommand.Execute & IPreparedQuery.Execute with all parameters are depreacated. Use fluent interface instead. 
   These methods will be removed in 3.2
-- data transfer tool available in cqlplus (DbCopy) from database (SQLServer) to Cassandra
+- data transfer tool available in cqlplus (DbCopy) from database (OLEDB) to Cassandra
+- slighly changed syntax of cqlplus: command do not ends with semi-colon, using EOL instead.
 
 version 3.1.4
 - split cassandra-sharp in 3 NuGet packages: cassandra-sharp (main), cassandra-sharp-interfaces & cassandra-sharp-core
